@@ -1,5 +1,5 @@
 ; $Id: de-DE.mod_clm_turnier.ini 2014-02-18
-; Copyright (C) 2005 - 2014 ChessLeagueManager. All rights reserved.
+; Copyright (C) 2008 - 2025 ChessLeagueManager. All rights reserved.
 ; Anmerkung: Alle INI-Dateien müssen als UTF-8 gespeichert werden - Kein BOM!
 
 CLM_MODULE_TURNIER_DESCRIPTION="ChessLeagueManager: Menumodul zur Verlinkung von Turnieren<br /><br />Wählen Sie <i>Turniere</i> per Kategorie und/oder ein oder mehrere Turniere einzeln aus.<br />Wählen Sie aus, welche <i>Links</i> gesetzt werden sollen.<br />Weitere <i>Extras</i> können eingeblendet werden.<br />Das <i>Design</i> kann angepast werden."
@@ -7,9 +7,11 @@ CLM_MODULE_TURNIER_DESCRIPTION="ChessLeagueManager: Menumodul zur Verlinkung von
 ; Parameter Basic #
 PARAMS_BASIC="Turnierauswahl"
 CATEGORY="Eine Turnierkategorie"
-CATEGORY_DESC="Alle Turniere einer einzelnen Kategorie, mit allen Unterkategorien, nach Sortierung der Turniere"
+CATEGORY_DESC="Alle Turniere einer einzelnen Kategorie, mit allen Unterkategorien, nach Sortierung der Turniere, ggf. in Kombination mit einer ausgewählten Saison"
+SEASON="und/oder eine Saison"
+SEASON_DESC="Alle Turniere einer einzelnen Saison nach Sortierung der Turniere, ggf. in Kombination mit einer ausgewählten Kategorie"
 TOURNAMENTS="und/oder einzelne Turniere"
-TOURNAMENTS_DESC="Ein oder mehrere Turniere auswählen."
+TOURNAMENTS_DESC="Ein oder mehrere Turniere auswählen. Diese Turniere werden zusätzlich zu den über Kategogie oder Saison oder über eine Kombination von beiden angezeigt"
 PARAMETER_SELECT="- auswählen -"
 BASIC_COMMENT="Eventuell doppelt gewählte Turniere werden nur einfach ausgegeben!"
 
