@@ -1,10 +1,9 @@
 ; $Id: en-GB.mod_clm_turnier.ini 2016-11-02
-; (C) Copyright 2008-2024 by CLM Project. All rights reserved.
+; (C) Copyright 2008-2025 by CLM Project. All rights reserved.
 ; Anmerkung: Alle INI-Dateien müssen als UTF-8 gespeichert werden - Kein BOM!
 ; Remark: All INI-files have to be saved as UTF-8, no BOM!
 ; recommended editor: Notepad++ https://notepad-plus-plus.org/
 ; english translation by Martin Blasczyk, 2016-11-10
-
 
 CLM_MODULE_TURNIER_DESCRIPTION="ChessLeagueManager: menu modul to link tournaments<br /><br />Choose a <i>Tournament</i> per category and/or one or more tournaments separately.<br />Choose the <i>links</i>.<br />Further <i>extras</i> can be displaued.<br />The <i>design</i> can be adjusted."
 
@@ -12,6 +11,8 @@ CLM_MODULE_TURNIER_DESCRIPTION="ChessLeagueManager: menu modul to link tournamen
 PARAMS_BASIC="choose tournament"
 CATEGORY="choose a category"
 CATEGORY_DESC="All tournaments of a single category, with all sub-categories, afer sorting of tournaments"
+SEASON="und/oder eine Saison"
+SEASON_DESC="Alle Turniere einer einzelnen Saison nach Sortierung der Turniere, ggf. in Kombination mit einer ausgewählten Kategorie"
 TOURNAMENTS="and/or single tournaments"
 TOURNAMENTS_DESC="choose one or more tournaments."
 PARAMETER_SELECT="- choose -"
